<resources>
    <string name="app_name">Calculator</string>


    <string name="tv_all_clear">AC</string>
    <string name="tv_plus_minus">+/-</string>
    <string name="tv_modulo">%</string>
    <string name="tv_minus">-</string>
    <string name="tv_plus">+</string>
    <string name="tv_divide">÷</string>
    <string name="tv_multiplication">x</string>
    <string name="tv_equal">=</string>
    <string name="tv_dot">.</string>
    <string name="tv_number_zero">0</string>
    <string name="tv_number_one">1</string>
    <string name="tv_number_two">2</string>
    <string name="tv_number_three">3</string>
    <string name="tv_number_four">4</string>
    <string name="tv_number_five">5</string>
    <string name="tv_number_six">6</string>
    <string name="tv_number_seven">7</string>
    <string name="tv_number_eight">8</string>
    <string name="tv_number_nine">9</string>
</resources>